// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkEmail Confirmation Spec React component On click on submit button should handle submit making an AJAX success request 1`] = `
<div
  className="work-email-confirmation"
>
  <div
    className="todo-body"
  >
    <div
      className="work-email-confirmation__email-section"
    >
      <h1
        className="todo-heading big"
      >
        Quickly and easily verify your employment
      </h1>
      <p
        className="todo-text"
      >
        The fastest way to verify your employment is to provide your work email. This email will only be used for verification purposes.
      </p>
      <label
        className="sr-only"
        htmlFor="work-email-confirmation-input"
      >
        Work email
      </label>
      <Input
        className="work-email-confirmation__work-email-control visible-inline"
        errorMessage={null}
        id="work-email-confirmation-input"
        inputClassName="work-email-confirmation__work-email-input visible-inline"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="enter your work email"
        required={true}
        type="email"
        value="some@email.tld"
      />
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-submit-email margin-bottom-32 margin-top-32"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
      <h2
        className="todo-heading"
      >
        What happens next?
      </h2>
      <ol
        className="todo-text"
      >
        <li>
          We'll send you a one-time confirmation email (it might take a few seconds).
        </li>
        <li>
          You click on the button in the email.
        </li>
        <li>
          You're done!
        </li>
      </ol>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-6"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-show-opt-out-section visible-block margin-bottom-32"
            onClick={[Function]}
            type="button"
          >
            I'd rather not provide my work email
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-6 text-right-sm"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-optout-do-not-have"
            onClick={[Function]}
            type="button"
          >
            I don't have a work email
          </button>
        </div>
      </div>
    </div>
    <Modal
      bodyClassName={null}
      className="todo-modal work-email-confirmation__modal-email-sent"
      contentClassName={null}
      dialogClassName="work-email-confirmation__modal-dialog"
      footer={null}
      footerClassName={null}
      header={null}
      headerClassName={null}
      onDismiss={[Function]}
      overlayClassName={null}
      role="dialog"
      tabIndex="-1"
      title={null}
      titleClassName={null}
    >
      <h2
        className="todo-heading text-center padding-all-0"
      >
        Email sent! To complete verification click the link in the email you receive.
      </h2>
    </Modal>
  </div>
</div>
`;

exports[`WorkEmail Confirmation Spec React component On click on submit button should show a modal with error if request fails 1`] = `
<div
  className="work-email-confirmation"
>
  <div
    className="todo-body"
  >
    <div
      className="work-email-confirmation__email-section"
    >
      <h1
        className="todo-heading big"
      >
        Quickly and easily verify your employment
      </h1>
      <p
        className="todo-text"
      >
        The fastest way to verify your employment is to provide your work email. This email will only be used for verification purposes.
      </p>
      <label
        className="sr-only"
        htmlFor="work-email-confirmation-input"
      >
        Work email
      </label>
      <Input
        className="work-email-confirmation__work-email-control visible-inline"
        errorMessage={null}
        id="work-email-confirmation-input"
        inputClassName="work-email-confirmation__work-email-input visible-inline"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="enter your work email"
        required={true}
        type="email"
        value="some@email.tld"
      />
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-submit-email margin-bottom-32 margin-top-32"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
      <h2
        className="todo-heading"
      >
        What happens next?
      </h2>
      <ol
        className="todo-text"
      >
        <li>
          We'll send you a one-time confirmation email (it might take a few seconds).
        </li>
        <li>
          You click on the button in the email.
        </li>
        <li>
          You're done!
        </li>
      </ol>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-6"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-show-opt-out-section visible-block margin-bottom-32"
            onClick={[Function]}
            type="button"
          >
            I'd rather not provide my work email
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-6 text-right-sm"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-optout-do-not-have"
            onClick={[Function]}
            type="button"
          >
            I don't have a work email
          </button>
        </div>
      </div>
    </div>
    <Modal
      bodyClassName={null}
      className="todo-modal work-email-confirmation__modal-error"
      contentClassName={null}
      dialogClassName="work-email-confirmation__modal-dialog"
      footer={null}
      footerClassName={null}
      header={null}
      headerClassName={null}
      onDismiss={[Function]}
      overlayClassName={null}
      role="dialog"
      tabIndex="-1"
      title={null}
      titleClassName={null}
    >
      <h2
        className="todo-heading text-center padding-all-0"
      >
        Something went wrong. Please try again later.
      </h2>
    </Modal>
  </div>
</div>
`;

exports[`WorkEmail Confirmation Spec React component On optOut submit Do not have click should handle opt out when request response is ok 1`] = `
<div
  className="work-email-confirmation"
>
  <div
    className="todo-body"
  >
    <SuccessMessage
      className=""
      subtitle="Please be sure to finish the rest of your task list."
      title="No problem. Thanks for letting us know"
      withIcon={false}
    >
      <a
        className="btn btn-todo"
        href="/account/myAccount.action"
      >
        Return to task list
      </a>
    </SuccessMessage>
  </div>
</div>
`;

exports[`WorkEmail Confirmation Spec React component On optOut submit Do not have click should show a modal with error if request fails 1`] = `
<div
  className="work-email-confirmation"
>
  <div
    className="todo-body"
  >
    <div
      className="work-email-confirmation__email-section"
    >
      <h1
        className="todo-heading big"
      >
        Quickly and easily verify your employment
      </h1>
      <p
        className="todo-text"
      >
        The fastest way to verify your employment is to provide your work email. This email will only be used for verification purposes.
      </p>
      <label
        className="sr-only"
        htmlFor="work-email-confirmation-input"
      >
        Work email
      </label>
      <Input
        className="work-email-confirmation__work-email-control visible-inline"
        errorMessage={null}
        id="work-email-confirmation-input"
        inputClassName="work-email-confirmation__work-email-input visible-inline"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="enter your work email"
        required={true}
        type="email"
        value=""
      />
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-submit-email margin-bottom-32 margin-top-32"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
      <h2
        className="todo-heading"
      >
        What happens next?
      </h2>
      <ol
        className="todo-text"
      >
        <li>
          We'll send you a one-time confirmation email (it might take a few seconds).
        </li>
        <li>
          You click on the button in the email.
        </li>
        <li>
          You're done!
        </li>
      </ol>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-6"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-show-opt-out-section visible-block margin-bottom-32"
            onClick={[Function]}
            type="button"
          >
            I'd rather not provide my work email
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-6 text-right-sm"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-optout-do-not-have"
            onClick={[Function]}
            type="button"
          >
            I don't have a work email
          </button>
        </div>
      </div>
    </div>
    <Modal
      bodyClassName={null}
      className="todo-modal work-email-confirmation__modal-error"
      contentClassName={null}
      dialogClassName="work-email-confirmation__modal-dialog"
      footer={null}
      footerClassName={null}
      header={null}
      headerClassName={null}
      onDismiss={[Function]}
      overlayClassName={null}
      role="dialog"
      tabIndex="-1"
      title={null}
      titleClassName={null}
    >
      <h2
        className="todo-heading text-center padding-all-0"
      >
        Something went wrong. Please try again later.
      </h2>
    </Modal>
  </div>
</div>
`;

exports[`WorkEmail Confirmation Spec React component On optOut submit Do not want click On "Go back to the faster way" buttton click should close the modal 1`] = `
<div
  className="work-email-confirmation"
>
  <div
    className="todo-body"
  >
    <div
      className="work-email-confirmation__email-section"
    >
      <h1
        className="todo-heading big"
      >
        Quickly and easily verify your employment
      </h1>
      <p
        className="todo-text"
      >
        The fastest way to verify your employment is to provide your work email. This email will only be used for verification purposes.
      </p>
      <label
        className="sr-only"
        htmlFor="work-email-confirmation-input"
      >
        Work email
      </label>
      <Input
        className="work-email-confirmation__work-email-control visible-inline"
        errorMessage={null}
        id="work-email-confirmation-input"
        inputClassName="work-email-confirmation__work-email-input visible-inline"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="enter your work email"
        required={true}
        type="email"
        value=""
      />
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-submit-email margin-bottom-32 margin-top-32"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
      <h2
        className="todo-heading"
      >
        What happens next?
      </h2>
      <ol
        className="todo-text"
      >
        <li>
          We'll send you a one-time confirmation email (it might take a few seconds).
        </li>
        <li>
          You click on the button in the email.
        </li>
        <li>
          You're done!
        </li>
      </ol>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-6"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-show-opt-out-section visible-block margin-bottom-32"
            onClick={[Function]}
            type="button"
          >
            I'd rather not provide my work email
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-6 text-right-sm"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-optout-do-not-have"
            onClick={[Function]}
            type="button"
          >
            I don't have a work email
          </button>
        </div>
      </div>
    </div>
    <Modal
      bodyClassName={null}
      className="todo-modal work-email-confirmation__modal-not-want"
      contentClassName={null}
      dialogClassName="work-email-confirmation__modal-dialog"
      footer={null}
      footerClassName={null}
      header={null}
      headerClassName={null}
      onDismiss={[Function]}
      overlayClassName={null}
      role="dialog"
      tabIndex="-1"
      title="Just a heads up..."
      titleClassName="todo-heading"
    >
      <p
        className="todo-text"
      >
        If you decide not to provide us with your work email, it may take us longer to verify your employment. We will use this email address to confirm your employment, but never for marketing purposes.
      </p>
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-fast-way margin-bottom-32"
        onClick={[Function]}
      >
        Go back to the faster way
      </button>
      <button
        className="btn-todo-link center-block work-email-confirmation__btn-optout-do-not-want"
        onClick={[Function]}
      >
        I understand, but I'd prefer not to
      </button>
    </Modal>
  </div>
</div>
`;

exports[`WorkEmail Confirmation Spec React component On optOut submit Do not want click On "I understand, but I'd prefer not to" button click should show a modal with error if request fails 1`] = `
<div
  className="work-email-confirmation"
>
  <div
    className="todo-body"
  >
    <div
      className="work-email-confirmation__email-section"
    >
      <h1
        className="todo-heading big"
      >
        Quickly and easily verify your employment
      </h1>
      <p
        className="todo-text"
      >
        The fastest way to verify your employment is to provide your work email. This email will only be used for verification purposes.
      </p>
      <label
        className="sr-only"
        htmlFor="work-email-confirmation-input"
      >
        Work email
      </label>
      <Input
        className="work-email-confirmation__work-email-control visible-inline"
        errorMessage={null}
        id="work-email-confirmation-input"
        inputClassName="work-email-confirmation__work-email-input visible-inline"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="enter your work email"
        required={true}
        type="email"
        value=""
      />
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-submit-email margin-bottom-32 margin-top-32"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
      <h2
        className="todo-heading"
      >
        What happens next?
      </h2>
      <ol
        className="todo-text"
      >
        <li>
          We'll send you a one-time confirmation email (it might take a few seconds).
        </li>
        <li>
          You click on the button in the email.
        </li>
        <li>
          You're done!
        </li>
      </ol>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-6"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-show-opt-out-section visible-block margin-bottom-32"
            onClick={[Function]}
            type="button"
          >
            I'd rather not provide my work email
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-6 text-right-sm"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-optout-do-not-have"
            onClick={[Function]}
            type="button"
          >
            I don't have a work email
          </button>
        </div>
      </div>
    </div>
    <Modal
      bodyClassName={null}
      className="todo-modal work-email-confirmation__modal-not-want"
      contentClassName={null}
      dialogClassName="work-email-confirmation__modal-dialog"
      footer={null}
      footerClassName={null}
      header={null}
      headerClassName={null}
      onDismiss={[Function]}
      overlayClassName={null}
      role="dialog"
      tabIndex="-1"
      title="Just a heads up..."
      titleClassName="todo-heading"
    >
      <p
        className="todo-text"
      >
        If you decide not to provide us with your work email, it may take us longer to verify your employment. We will use this email address to confirm your employment, but never for marketing purposes.
      </p>
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-fast-way margin-bottom-32"
        onClick={[Function]}
      >
        Go back to the faster way
      </button>
      <button
        className="btn-todo-link center-block work-email-confirmation__btn-optout-do-not-want"
        onClick={[Function]}
      >
        I understand, but I'd prefer not to
      </button>
    </Modal>
  </div>
</div>
`;

exports[`WorkEmail Confirmation Spec React component On optOut submit Do not want click On "I understand, but I'd prefer not to" button click should show a success message when get a success response 1`] = `
<div
  className="work-email-confirmation"
>
  <div
    className="todo-body"
  >
    <div
      className="work-email-confirmation__email-section"
    >
      <h1
        className="todo-heading big"
      >
        Quickly and easily verify your employment
      </h1>
      <p
        className="todo-text"
      >
        The fastest way to verify your employment is to provide your work email. This email will only be used for verification purposes.
      </p>
      <label
        className="sr-only"
        htmlFor="work-email-confirmation-input"
      >
        Work email
      </label>
      <Input
        className="work-email-confirmation__work-email-control visible-inline"
        errorMessage={null}
        id="work-email-confirmation-input"
        inputClassName="work-email-confirmation__work-email-input visible-inline"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="enter your work email"
        required={true}
        type="email"
        value=""
      />
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-submit-email margin-bottom-32 margin-top-32"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
      <h2
        className="todo-heading"
      >
        What happens next?
      </h2>
      <ol
        className="todo-text"
      >
        <li>
          We'll send you a one-time confirmation email (it might take a few seconds).
        </li>
        <li>
          You click on the button in the email.
        </li>
        <li>
          You're done!
        </li>
      </ol>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-6"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-show-opt-out-section visible-block margin-bottom-32"
            onClick={[Function]}
            type="button"
          >
            I'd rather not provide my work email
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-6 text-right-sm"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-optout-do-not-have"
            onClick={[Function]}
            type="button"
          >
            I don't have a work email
          </button>
        </div>
      </div>
    </div>
    <Modal
      bodyClassName={null}
      className="todo-modal work-email-confirmation__modal-not-want"
      contentClassName={null}
      dialogClassName="work-email-confirmation__modal-dialog"
      footer={null}
      footerClassName={null}
      header={null}
      headerClassName={null}
      onDismiss={[Function]}
      overlayClassName={null}
      role="dialog"
      tabIndex="-1"
      title="Just a heads up..."
      titleClassName="todo-heading"
    >
      <p
        className="todo-text"
      >
        If you decide not to provide us with your work email, it may take us longer to verify your employment. We will use this email address to confirm your employment, but never for marketing purposes.
      </p>
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-fast-way margin-bottom-32"
        onClick={[Function]}
      >
        Go back to the faster way
      </button>
      <button
        className="btn-todo-link center-block work-email-confirmation__btn-optout-do-not-want"
        onClick={[Function]}
      >
        I understand, but I'd prefer not to
      </button>
    </Modal>
  </div>
</div>
`;

exports[`WorkEmail Confirmation Spec React component On optOut submit Do not want click should show modal with "Do not want" options 1`] = `
<div
  className="work-email-confirmation"
>
  <div
    className="todo-body"
  >
    <div
      className="work-email-confirmation__email-section"
    >
      <h1
        className="todo-heading big"
      >
        Quickly and easily verify your employment
      </h1>
      <p
        className="todo-text"
      >
        The fastest way to verify your employment is to provide your work email. This email will only be used for verification purposes.
      </p>
      <label
        className="sr-only"
        htmlFor="work-email-confirmation-input"
      >
        Work email
      </label>
      <Input
        className="work-email-confirmation__work-email-control visible-inline"
        errorMessage={null}
        id="work-email-confirmation-input"
        inputClassName="work-email-confirmation__work-email-input visible-inline"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="enter your work email"
        required={true}
        type="email"
        value=""
      />
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-submit-email margin-bottom-32 margin-top-32"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
      <h2
        className="todo-heading"
      >
        What happens next?
      </h2>
      <ol
        className="todo-text"
      >
        <li>
          We'll send you a one-time confirmation email (it might take a few seconds).
        </li>
        <li>
          You click on the button in the email.
        </li>
        <li>
          You're done!
        </li>
      </ol>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-6"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-show-opt-out-section visible-block margin-bottom-32"
            onClick={[Function]}
            type="button"
          >
            I'd rather not provide my work email
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-6 text-right-sm"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-optout-do-not-have"
            onClick={[Function]}
            type="button"
          >
            I don't have a work email
          </button>
        </div>
      </div>
    </div>
    <Modal
      bodyClassName={null}
      className="todo-modal work-email-confirmation__modal-not-want"
      contentClassName={null}
      dialogClassName="work-email-confirmation__modal-dialog"
      footer={null}
      footerClassName={null}
      header={null}
      headerClassName={null}
      onDismiss={[Function]}
      overlayClassName={null}
      role="dialog"
      tabIndex="-1"
      title="Just a heads up..."
      titleClassName="todo-heading"
    >
      <p
        className="todo-text"
      >
        If you decide not to provide us with your work email, it may take us longer to verify your employment. We will use this email address to confirm your employment, but never for marketing purposes.
      </p>
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-fast-way margin-bottom-32"
        onClick={[Function]}
      >
        Go back to the faster way
      </button>
      <button
        className="btn-todo-link center-block work-email-confirmation__btn-optout-do-not-want"
        onClick={[Function]}
      >
        I understand, but I'd prefer not to
      </button>
    </Modal>
  </div>
</div>
`;

exports[`WorkEmail Confirmation Spec React component WorkEmailConfirmation render correctly 1`] = `
<div
  className="work-email-confirmation"
>
  <div
    className="todo-body"
  >
    <div
      className="work-email-confirmation__email-section"
    >
      <h1
        className="todo-heading big"
      >
        Quickly and easily verify your employment
      </h1>
      <p
        className="todo-text"
      >
        The fastest way to verify your employment is to provide your work email. This email will only be used for verification purposes.
      </p>
      <label
        className="sr-only"
        htmlFor="work-email-confirmation-input"
      >
        Work email
      </label>
      <Input
        className="work-email-confirmation__work-email-control visible-inline"
        errorMessage={null}
        id="work-email-confirmation-input"
        inputClassName="work-email-confirmation__work-email-input visible-inline"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="enter your work email"
        required={true}
        type="email"
        value=""
      />
      <button
        className="btn btn-todo center-block work-email-confirmation__btn-submit-email margin-bottom-32 margin-top-32"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
      <h2
        className="todo-heading"
      >
        What happens next?
      </h2>
      <ol
        className="todo-text"
      >
        <li>
          We'll send you a one-time confirmation email (it might take a few seconds).
        </li>
        <li>
          You click on the button in the email.
        </li>
        <li>
          You're done!
        </li>
      </ol>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-6"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-show-opt-out-section visible-block margin-bottom-32"
            onClick={[Function]}
            type="button"
          >
            I'd rather not provide my work email
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-6 text-right-sm"
        >
          <button
            className="btn-todo-link work-email-confirmation__btn-optout-do-not-have"
            onClick={[Function]}
            type="button"
          >
            I don't have a work email
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
